--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,9 +39,7 @@ application.langs="en"
 # db.default.password=""
 
 # Evolutions
-# ~~~~~
-# You can disable evolutions if needed
-# evolutionplugin=disabled
+applyEvolutions.default=true
 
 # Logger
 # ~~~~~
