--- a/conf/application.conf
+++ b/conf/application.conf
@@ -37,13 +37,8 @@ application.langs="en"
 # db.default.user=sa
 # db.default.password=""
 
-#db.default.driver=org.h2.Driver
-#db.default.url="jdbc:h2:mem:play"
-
-db.default.driver=org.postgresql.Driver
-  db.default.url="jdbc:postgresql://servername:port/db_name"
-  #db.default.user=postgres
-  #db.default.password=pass
+db.default.driver=org.h2.Driver
+db.default.url="jdbc:h2:mem:play"
 
 
 
