Deployment work.. Modified application.config file.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -44,7 +44,7 @@ db.default.url="postgres://ibibjyxukawtqo:y9YH2xFG2hfTzJKbytiRspSXAr@ec2-184-73-
 
 
 # Evolutions
-applyEvolutions.default=true
+#applyEvolutions.default=true
 
 # Logger
 # ~~~~~
