--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,8 +39,8 @@ application.langs="en"
 
 #db.default.driver=org.h2.Driver
 #db.default.url="jdbc:h2:mem:play"
-db.default.driver=org.postgresql.Driver
-db.default.url="postgres://ibibjyxukawtqo:y9YH2xFG2hfTzJKbytiRspSXAr@ec2-184-73-194-196.compute-1.amazonaws.com:5432/d2fsoa6nldt0du"
+#db.default.driver=org.postgresql.Driver
+#db.default.url="postgres://ibibjyxukawtqo:y9YH2xFG2hfTzJKbytiRspSXAr@ec2-184-73-194-196.compute-1.amazonaws.com:5432/d2fsoa6nldt0du"
 
 
 # Evolutions
