--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,18 +36,13 @@ application.langs="en"
 db.default.user=angra
 db.default.password=imapirate
 
-<<<<<<< Updated upstream
-# db.default.user=sa
-# db.default.password=""
 
-#db.default.driver=org.h2.Driver
-#db.default.url="jdbc:h2:mem:play"
-#db.default.driver=org.postgresql.Driver
-#db.default.url="postgres://ibibjyxukawtqo:y9YH2xFG2hfTzJKbytiRspSXAr@ec2-184-73-194-196.compute-1.amazonaws.com:5432/d2fsoa6nldt0du"
-=======
+db.default.user=angra
+db.default.password=imapirate
 db.default.driver=org.postgresql.Driver
 db.default.url="postgres://ibibjyxukawtqo:y9YH2xFG2hfTzJKbytiRspSXAr@ec2-184-73-194-196.compute-1.amazonaws.com:5432/d2fsoa6nldt0du"
->>>>>>> Stashed changes
+
+
 
 
 # Evolutions
