--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,7 +38,7 @@ db.default.password=imapirate
 
 
 db.default.user=angra
-db.default.password=imapirate
+db.default.password="imapirate"
 db.default.driver=org.postgresql.Driver
 db.default.url="postgres://ibibjyxukawtqo:y9YH2xFG2hfTzJKbytiRspSXAr@ec2-184-73-194-196.compute-1.amazonaws.com:5432/d2fsoa6nldt0du"
 
