--- a/conf/application.conf
+++ b/conf/application.conf
@@ -60,5 +60,10 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
-
+#Mail
+smtp.host=smtp.gmail.com
+smtp.port=587
+smtp.ssl=yes
+smtp.user="cetservicesinc@gmail.com"
+smtp.password="anthonysine"
 
